User service, login page

--- a/WebApp/Pages/Index.razor
+++ b/WebApp/Pages/Index.razor
@@ -17,7 +17,7 @@ Welcome to your new app.
 
     protected override async Task OnInitializedAsync()
     {
-        title = await GetMovieTitle();
+        //title = await GetMovieTitle();
     }
 
     private async Task<string> GetMovieTitle()
