--- a/WebApp/Pages/Login.razor
+++ b/WebApp/Pages/Login.razor
@@ -1,58 +1,96 @@
 ﻿@page "/login"
 @namespace LoginComponent
 
+@using Microsoft.AspNetCore.Components.Authorization
 @using WebApp.Data.Users;
 @using WebApp.Models;
+@using System.Security.Claims
+@using WebApp.Models.Authentication
 
 @inject IUserService UserService
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
 
-<h3>Login</h3>
+<AuthorizeView>
+    <NotAuthorized>
+        <div class="container">
+            <div class="row">
+                <div class=" mx-auto">
+
+                    <h5 class="card-title text-center">Login</h5>
+                    <form class="form-login">
+                        <div class="form-label-group">
+                            <label class="oi oi-person">  Email</label>
+                            <input type="email" class="form-control" placeholder="Email" @bind-value="email" required>
+                        </div>
+                        <div class="form-label-group">
+                            <label class="oi oi-lock-locked"> Password</label>
+                            <input type="password" class="form-control" placeholder="Password" @bind-value="password" required>
+                        </div>
+
+                    </form>
+                    <div class="form-label-group">
+                        <button class="btn btn-outline-success btn-block text-uppercase" type="submit" @onclick="PerformLogin">Login</button>
+                        <p class="text-center">Don't have an account? <a class="btn btn-primary" href="Register">Sign up</a> </p>
+                    </div>
+                    @if (!string.IsNullOrWhiteSpace(errorMessage))
+                    {
+                        <div class="alert alert-danger">
+                            @errorMessage
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </NotAuthorized>
+    <Authorized>
+        <div class="container">
+            <div class="row">
+                <div class=" mx-auto">
+                    <button class="btn btn-outline-danger btn-block" href="" @onclick="PerformLogout">
+                        Log out
+                    </button>
+                </div>
+            </div>
+        </div>
+    </Authorized>
+</AuthorizeView>
 
 
-<div class="form-group">
-    <label>Email</label>
-    <input type="text" placeholder="email" @bind-value="email" />
-</div>
-<div class="form-group">
-    <label>Password</label>
-    <input type="password" placeholder="password" @bind-value="password" />
-</div>
-<div style="color:red">@errorMessage</div>
-
-<button @onclick="PerformLogin">
-    Login
-</button>
-<!--
-    <a href="" @onclick="PerformLogout">
-        Logout
-    </a>
--->
 @code {
     private string email;
     private string password;
     private string errorMessage;
+    [CascadingParameter] protected Task<AuthenticationState> AuthStat { get; set; }
 
     public async Task PerformLogin()
     {
         errorMessage = "";
         try
         {
-            User user = await UserService.ValidateUser(email, password);
+            await ((CustomAuthenticationStateProvider)AuthenticationStateProvider).ValidateLogin(email, password);
+            var userPrincipal = (await AuthStat).User;
 
-            if (user == null)
-            {
-                errorMessage = "Validation failed";
-            }
-            else
-            {
-                email = "";
-                password = "";
-                errorMessage = "Success";
-            }
+            UserService.SetUserId(int.Parse(userPrincipal.FindFirst(c => c.Type == ClaimTypes.SerialNumber)?.Value));
+            email = "";
+            password = "";
         }
         catch (Exception e)
         {
             errorMessage = e.Message;
         }
+    }
+    
+    public async Task PerformLogout()
+    {
+        errorMessage = "";
+        email = "";
+        password = "";
+        try
+        {
+            ((CustomAuthenticationStateProvider)AuthenticationStateProvider).Logout();
+            NavigationManager.NavigateTo("/");
+        }
+        catch (Exception e) { }
     }
 }
