--- a/WebApp/Pages/Movies.razor
+++ b/WebApp/Pages/Movies.razor
@@ -30,8 +30,8 @@ else
              @foreach (var m in movieList.movies)
              {
               <div class="col-md-2 card">
-                <div class="product-image card-body">
-                    <a href="#" class="card-img">
+                <div class="card-body">                   
+                    <a href="/MovieOverview" class="card-img" @onclick="() => MovieSelected(m.id)">
                        <img class="movie-image" src="http://image.tmdb.org/t/p/w500/@m.poster_path">                               
                     </a>
                 </div>
@@ -40,13 +40,15 @@ else
                     <p>@m.release_date</p>
                 </div>
               </div>
-            }
+             }
         </div>
 
         <div class="navbar align-content-center">
-            <button class="btn btn-white" @onclick="PreviousPage" > <i class="bi bi-arrow-left-square"></i> </button>
+            <a href="/Movies" class="btn btn-white" @onclick="FirstPage" title="First Page" ><i class="bi bi-chevron-double-left"></i> </a>
+            <a href="/Movies" class="btn btn-white" @onclick="PreviousPage" title="Previous Page" > <i class="bi bi-arrow-left-square"></i> </a>
                 <span>Page @movieList.CurrentPage of @movieList.TotalPage </span>
-            <button class="btn btn-white" @onclick="NextPage" ><i class="bi bi-arrow-right-square"></i> </button>
+            <a href="/Movies" class="btn btn-white" @onclick="NextPage" title="Next Page" ><i class="bi bi-arrow-right-square"></i> </a>
+            <a href="/Movies" class="btn btn-white" @onclick="LastPage" title="Last Page" ><i class="bi bi-chevron-double-right"></i> </a>
         </div>
     </div>
 }
@@ -65,7 +67,7 @@ else
         return result;
     }
 
-    protected async Task NextPage(MouseEventArgs mouseEventArgs)
+    protected async Task NextPage()
     {
         if (currentPage < movieList.TotalPage)
         {
@@ -75,7 +77,7 @@ else
 
     }
 
-    protected async Task PreviousPage(MouseEventArgs mouseEventArgs)
+    protected async Task PreviousPage()
     {
         if (currentPage > 1)
         {         
@@ -84,4 +86,26 @@ else
         }
     }
 
+    protected async Task FirstPage()
+    {
+        if (currentPage != 1)
+        {
+            currentPage = 1;
+            movieList = await GetMovies(currentPage);   
+        }
+    }
+
+    protected async Task LastPage()
+    {
+        if (currentPage != movieList.TotalPage)
+        {
+            currentPage = movieList.TotalPage;
+            movieList = await GetMovies(movieList.TotalPage);   
+        }
+    }
+
+     public async Task MovieSelected(int id)
+    {
+        MovieService.SetMovieId(id);
+    }
 }
