--- a/WebApp/Pages/MovieOverview.razor
+++ b/WebApp/Pages/MovieOverview.razor
@@ -12,17 +12,17 @@
 else
 {
     <div class="container">
-             <div class="card">
-                 <div class="card-body"> 
-                     <div class="row">
-                        <div class="col-md-4">
-                           <img class="movie-image card-img" src="http://image.tmdb.org/t/p/w500/@movie.poster_path">
-                           <div class="row">
-                               <div class="col-md-7" id="release-date">
-                                    <h6>@movie.release_date</h6>
-                               </div>
-                               <div class="ratings col-md-5">
-                                @switch(averageRating)
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="movie-image card-img" src="http://image.tmdb.org/t/p/w500/@movie.poster_path">
+                        <div class="row">
+                            <div class="col-md-7" id="release-date">
+                                <h6>@movie.release_date</h6>
+                            </div>
+                            <div class="ratings col-md-5">
+                                @switch (averageRating)
                                 {
                                     case 1:
                                         <i class="bi bi-star-fill"></i>
@@ -52,44 +52,44 @@ else
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star"></i>
                                         break;
-                                   case 5:
+                                    case 5:
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         break;
-                                }                                             
-                            </div>
-                           </div>
-                           
-                           
-                        </div>
-                        <div class="col-md-8">
-                            <div>
-                                <h2>@movie.title <a href="/MovieOverview" title="Add to favourite list" style="text-decoration:none;"><i class="bi bi-bookmark-heart-fill"></i></a></h2> <br>
-                                <h4>Overview</h4>
-                                <p class="title">@movie.overview</p> 
-                            </div> <br> <br>
-                            <div class ="col-md-12">
-                                <h4>Actors</h4>
-                                <ol class="actors scroller">
-                                    @foreach(Actor actor in credit.Actors)
-                                    {
-                                        <li class="card">
-                                            <a href="/MovieOverview">
-                                               <img class="actor-image" src="http://image.tmdb.org/t/p/w500/@actor.ProfilePath">    
-                                               <h6>@actor.OriginalName</h6>
-                                            </a>
-                                        </li>
-                                    }
-                                 </ol>
+                                }
                             </div>
                         </div>
-                      </div>
-                      <span id="rateMe3"  class="rating-faces"></span>
-              </div>                
-           </div>
+
+
+                    </div>
+                    <div class="col-md-8">
+                        <div>
+                            <h2>@movie.title <a href="/MovieOverview" title="Add to favourite list" style="text-decoration:none;"><i class="bi bi-bookmark-heart-fill"></i></a></h2> <br>
+                            <h4>Overview</h4>
+                            <p class="title">@movie.overview</p>
+                        </div> <br> <br>
+                        <div class="col-md-12">
+                            <h4>Actors</h4>
+                            <ol class="actors scroller">
+                                @foreach (Actor actor in @actors)
+                                {
+                                    <li class="card">
+                                        <a href="/MovieOverview">
+                                            <img class="actor-image" src="http://image.tmdb.org/t/p/w500/@actor.ProfilePath">
+                                            <h6>@actor.OriginalName</h6>
+                                        </a>
+                                    </li>
+                                }
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                <span id="rateMe3" class="rating-faces"></span>
+            </div>
+        </div>
     </div>
 }
 
@@ -98,13 +98,21 @@ else
     private Movie movie = new Movie();
     private int averageRating;
     private Credit credit = new Credit();
+    private List<Actor> actors = new List<Actor>();
 
     protected override async Task OnInitializedAsync()
     {
         movie = await GetMovie(MovieService.GetMovieId());
         credit = await GetCreditsByMovie(MovieService.GetMovieId());
-        averageRating = (int)movie.vote_average/2;
+        averageRating = (int)movie.vote_average / 2;
 
+        foreach (Actor actor in credit.Actors)
+        {
+            if (actor.ProfilePath != null)
+            {
+                actors.Add(actor);
+            }
+        }
     }
 
     private async Task<Movie> GetMovie(int id)
@@ -113,7 +121,7 @@ else
         return result;
     }
 
-     private async Task<Credit> GetCreditsByMovie(int id)
+    private async Task<Credit> GetCreditsByMovie(int id)
     {
         var result = await MovieService.GetCreditsByMovieId(id);
         return result;
