Fixes the issue with actors without profile pic. Added number for ratings.

--- a/WebApp/Pages/MovieOverview.razor
+++ b/WebApp/Pages/MovieOverview.razor
@@ -25,6 +25,7 @@ else
                                 @switch (averageRating)
                                 {
                                     case 1:
+                                        <span>@averageRating / 5 </span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star"></i>
                                         <i class="bi bi-star"></i>
@@ -32,6 +33,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 2:
+                                        <span>@averageRating / 5 </span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star"></i>
@@ -39,6 +41,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 3:
+                                        <span>@averageRating / 5 </span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -46,6 +49,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 4:
+                                        <span>@averageRating / 5 </span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -53,6 +57,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 5:
+                                        <span>@averageRating / 5 </span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -74,11 +79,19 @@ else
                         <div class="col-md-12">
                             <h4>Actors</h4>
                             <ol class="actors scroller">
-                                @foreach (Actor actor in @actors)
+                                @foreach (Actor actor in @credit.Actors)
                                 {
                                     <li class="card">
                                         <a href="/MovieOverview">
-                                            <img class="actor-image" src="http://image.tmdb.org/t/p/w500/@actor.ProfilePath">
+                                            @if (@actor.ProfilePath != null)
+                                            {
+                                                <img class="actor-image" src="http://image.tmdb.org/t/p/w500/@actor.ProfilePath">
+                                            }
+                                            else
+                                            {
+                                               <img class="actor-image" src="/User_gray.png" style="margin-bottom:45px;"><br /><br />
+                                            }
+
                                             <h6>@actor.OriginalName</h6>
                                         </a>
                                     </li>
@@ -105,14 +118,6 @@ else
         movie = await GetMovie(MovieService.GetMovieId());
         credit = await GetCreditsByMovie(MovieService.GetMovieId());
         averageRating = (int)movie.vote_average / 2;
-
-        foreach (Actor actor in credit.Actors)
-        {
-            if (actor.ProfilePath != null)
-            {
-                actors.Add(actor);
-            }
-        }
     }
 
     private async Task<Movie> GetMovie(int id)
