--- a/WebApp/Pages/MovieOverview.razor
+++ b/WebApp/Pages/MovieOverview.razor
@@ -1,7 +1,12 @@
 ﻿@page "/MovieOverview"
+@using WebApp.Data.FavoriteMovie
 @using WebApp.Data.Movies
+@using WebApp.Data.Users
 @using WebApp.Models
+@using WebApp.Models.Authentication
 @inject IMovieService MovieService
+@inject IFavoriteMovieService FavoriteMovieService
+@inject IUserService UserService
 
 @if (movie == null)
 {
@@ -72,7 +77,7 @@ else
                     </div>
                     <div class="col-md-8">
                         <div>
-                            <h2>@movie.title <a href="/MovieOverview" title="Add to favourite list" style="text-decoration:none;"><i class="bi bi-bookmark-heart-fill"></i></a></h2> <br>
+                            <h2>@movie.title <a href="/MovieOverview" title="Add to favourite list" @onclick="AddMovieToFavorites" style="text-decoration:none;"><i class="bi bi-bookmark-heart-fill" ></i></a></h2> <br>
                             <h4>Overview</h4>
                             <p class="title">@movie.overview</p>
                         </div> <br> <br>
@@ -89,7 +94,11 @@ else
                                             }
                                             else
                                             {
-                                               <img class="actor-image" src="/User_gray.png" style="margin-bottom:45px;"><br /><br />
+                                                <img class="actor-image" src="/User_gray.png" style="margin-bottom:45px;">
+
+                                                <br />
+
+                                                <br />
                                             }
 
                                             <h6>@actor.OriginalName</h6>
@@ -121,7 +130,7 @@ else
 
         foreach (Actor actor in credit.Actors)
         {
-                actors.Add(actor);
+            actors.Add(actor);
         }
     }
 
@@ -135,5 +144,10 @@ else
     {
         var result = await MovieService.GetCreditsByMovieId(id);
         return result;
+    }
+
+    private async Task AddMovieToFavorites()
+    {
+        await FavoriteMovieService.AddFavoriteMovie(UserService.GetUserId(), MovieService.GetMovieId());
     }
 }
