Actor overview page

--- a/WebApp/Pages/MovieOverview.razor
+++ b/WebApp/Pages/MovieOverview.razor
@@ -1,7 +1,9 @@
 ﻿@page "/MovieOverview"
 @using WebApp.Data.Movies
+@using WebApp.Data.Actors
 @using WebApp.Models
 @inject IMovieService MovieService
+@inject IActorService ActorService
 
 @if (movie == null)
 {
@@ -18,14 +20,14 @@ else
                     <div class="col-md-4">
                         <img class="movie-image card-img" src="http://image.tmdb.org/t/p/w500/@movie.poster_path">
                         <div class="row">
-                            <div class="col-md-7" id="release-date">
+                            <div class="col-md-6" id="release-date">
                                 <h6>@movie.release_date</h6>
                             </div>
-                            <div class="ratings col-md-5">
+                            <div class="ratings col-md-6">
                                 @switch (averageRating)
                                 {
                                     case 1:
-                                        <span>@averageRating / 5 </span>
+                                        <span>(@movie.vote_average / 10)</span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star"></i>
                                         <i class="bi bi-star"></i>
@@ -33,7 +35,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 2:
-                                        <span>@averageRating / 5 </span>
+                                        <span>(@movie.vote_average / 10)</span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star"></i>
@@ -41,7 +43,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 3:
-                                        <span>@averageRating / 5 </span>
+                                        <span>(@movie.vote_average / 10)</span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -49,7 +51,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 4:
-                                        <span>@averageRating / 5 </span>
+                                       <span>(@movie.vote_average / 10)</span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -57,7 +59,7 @@ else
                                         <i class="bi bi-star"></i>
                                         break;
                                     case 5:
-                                        <span>@averageRating / 5 </span>
+                                        <span>(@movie.vote_average / 10)</span>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -74,7 +76,7 @@ else
                         <div>
                             <h2>@movie.title <a href="/MovieOverview" title="Add to favourite list" style="text-decoration:none;"><i class="bi bi-bookmark-heart-fill"></i></a></h2> <br>
                             <h4>Overview</h4>
-                            <p class="title">@movie.overview</p>
+                            <p>@movie.overview</p>
                         </div> <br> <br>
                         <div class="col-md-12">
                             <h4>Actors</h4>
@@ -82,7 +84,7 @@ else
                                 @foreach (Actor actor in @actors)
                                 {
                                     <li class="card">
-                                        <a href="/MovieOverview">
+                                        <a href="/ActorOverview" class="card-img" @onclick="() => ActorSelected(actor.Id)">
                                             @if (@actor.ProfilePath != null)
                                             {
                                                 <img class="actor-image" src="http://image.tmdb.org/t/p/w500/@actor.ProfilePath">
@@ -91,7 +93,6 @@ else
                                             {
                                                <img class="actor-image" src="/User_gray.png" style="margin-bottom:45px;"><br /><br />
                                             }
-
                                             <h6>@actor.OriginalName</h6>
                                         </a>
                                     </li>
@@ -100,7 +101,6 @@ else
                         </div>
                     </div>
                 </div>
-                <span id="rateMe3" class="rating-faces"></span>
             </div>
         </div>
     </div>
@@ -135,5 +135,10 @@ else
     {
         var result = await MovieService.GetCreditsByMovieId(id);
         return result;
+    }
+
+   public async Task ActorSelected(int id)
+    {
+        ActorService.SetActorId(id);
     }
 }
