--- a/WebApp/Pages/Movies.razor
+++ b/WebApp/Pages/Movies.razor
@@ -30,14 +30,15 @@ else
              @foreach (var m in movieList.movies)
              {
               <div class="col-md-2 card">
-                <div class="card-body">                   
+                <div >                   
                     <a href="/MovieOverview" class="card-img" @onclick="() => MovieSelected(m.id)">
                        <img class="movie-image" src="http://image.tmdb.org/t/p/w500/@m.poster_path">                               
                     </a>
                 </div>
-                <div>
-                    <h5 class="title"><a> @m.title</a></h5>
-                    <p>@m.release_date</p>
+                <div class="title">
+                    <h5 ><a> @m.title</a></h5>
+                    <p>@m.release_date <br>
+                    (@m.vote_average / 10)</p>
                 </div>
               </div>
              }
