--- a/WebApp/Pages/Movies.razor
+++ b/WebApp/Pages/Movies.razor
@@ -52,7 +52,7 @@ else
              }
         </div>
 
-        <div class="navbar align-content-center">
+        <div class="align-content-center" style="text-align:center">
             <a href="/Movies" class="btn btn-white" @onclick="FirstPage" title="First Page"><i class="bi bi-chevron-double-left"></i> </a>
             <a href="/Movies" class="btn btn-white" @onclick="PreviousPage" title="Previous Page"> <i class="bi bi-arrow-left-square"></i> </a>
             <span>Page @movieList.CurrentPage of @movieList.TotalPage </span>
