--- a/WebApp/Shared/MainLayout.razor
+++ b/WebApp/Shared/MainLayout.razor
@@ -2,19 +2,13 @@
 @inject NavigationManager NavigationManager
 @inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<header>
+  <NavMenu />
+</header>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+<div class="container">
+    <main role="main" class="pb-3">
+        @Body
     </main>
 </div>
 
@@ -31,7 +25,7 @@
 
         if (!user.Identity.IsAuthenticated)
         {
-            NavigationManager.NavigateTo($"/");
+            NavigationManager.NavigateTo($"/Movies");
         }
     }
 }
