--- a/WebApp/Pages/ActorOverview.razor
+++ b/WebApp/Pages/ActorOverview.razor
@@ -24,11 +24,11 @@ else
                                 <span class="fw-bold">Birthday </span> <br>
                                 <span>@actor.Birthday</span><br>
                                 <span class="fw-bold">Place of birth</span><br>
-                                <span>@actor.place_of_birth</span>
+                                <span>@actor.place_of_birth</span><br>
+                                <span class="fw-bold">Average rating for movies starred in</span><br>
+                                <span>(@averageMovieRatings / 10)</span>
                             </div>
                         </div>
-
-
                     </div>
                     <div class="col-md-8">
                         <div>
@@ -66,7 +66,7 @@ else
 @code {
 
     private Actor actor = new Actor();
-    private int averageRating;
+    private double averageMovieRatings;
     private MovieCredit credit = new MovieCredit();
     private List<Movie> movies = new List<Movie>();
 
@@ -74,11 +74,12 @@ else
     {
         actor = await GetActor(ActorService.GetActorId());
         credit = await GetMovieCreditsByActorId(ActorService.GetActorId());
-        averageRating = (int)actor.Popularity;
         foreach (Movie movie in credit.Movies)
         {
-                movies.Add(movie);
+            movies.Add(movie);
+            averageMovieRatings += movie.vote_average;
         }
+        averageMovieRatings = Math.Round(averageMovieRatings / movies.Count, 2);
     }
 
     private async Task<Actor> GetActor(int id)
